Describe LoRA+ and PiSSA

--- a/docs/main.tex
+++ b/docs/main.tex
@@ -77,9 +77,10 @@ The dataset contains 70,042 samples in total: 67,349 in the train set, 872 in th
 
 \noindent\textbf{LoRA-XS.}  LoRA-XS \cite{balazy2024loraxslowrankadaptationextremely} adds an intermediate low-rank matrix $R\!\in\!\mathbb{R}^{r\times r}$ and factorises the residual as $\Delta W = A R B^{\top}$.  The extra $r^{2}$ parameters increase expressiveness while preserving the $\mathcal{O}(r(d_{\text{out}}+d_{\text{in}}))$ memory budget (for typical $r\!\ll\!d$ the $r^{2}$ term is negligible). Empirically, LoRA-XS allows for more expressive low-rank representations while maintaining the same memory footprint as vanilla LoRA.
 
-\noindent\textbf{LoRA+} Describe LoRA+ \cite{hayou2024loraefficientlowrank}
+\noindent\textbf{LoRA+}\cite{hayou2024loraefficientlowrank} modifies the original LoRA method by applying different learning rates to the low-rank matrices $A$ and $B$. Since $A\!\in\!\mathbb{R}^{d_{\text{out}}\times r}$ and $B^\top\!\in\!\mathbb{R}^{r\times d_{\text{in}}}$ have completely different shapes, the authors argue that their differing dimensionality and roles justify independent optimization dynamics. Empirically, using a higher learning rate for $A$ (typically by a factor of 2-4 for LLaMA models) improves convergence and downstream performance. Note that in the LoRA+ paper the terminology is slightly different, with $A$ and $B$ swapped compared to the original LoRA paper.
 
-\noindent\textbf{PiSSA} Describe PiSSA \cite{meng2025pissaprincipalsingularvalues}
+\noindent\textbf{PiSSA.} PiSSA\cite{meng2025pissaprincipalsingularvalues} (Principal Singular Values and Singular Vectors Adaptation of Large Language Models) introduces a singular value decomposition (SVD)-based initialization strategy for LoRA. Given a target weight matrix \( W \in \mathbb{R}^{d_{\text{out}} \times d_{\text{in}}} \), PiSSA computes its SVD: \( W = U \Sigma V^\top \). The top-\( r \) singular components are then used to initialize the low-rank adaptation matrices \( A \) and \( B \) such that \( \Delta W = AB^\top \), where \( A = U_{[:, :r]} \Sigma^{1 / 2}_{[:r, :r]} \in \mathbb{R}^{d_{\text{out}} \times r} \) and \( B = \Sigma^{1 / 2}_{[:r, :r]} V^\top_{[:, :r]} \). Furthermore, before freezing, the original weight matrix $W$ is replaced with the rest of the singular components, i.e., \( W = U_{[:, r:]} \Sigma_{[r:, r:]} V^\top_{[:, r:]} \in \mathbb{R}^{m \times n} \). By $\Sigma^{1 / 2}$ we mean the square root of the diagonal matrix $\Sigma$ and the slicing notations are consistent with PyTorch's tensor indexing. This initialization aligns the low-rank structure with the principal subspace of the original weight matrix, improving convergence speed and performance stability in downstream tasks.
+
 
 %---------------------------------------------------------
 \section{Experiments}
