Add initial plots for LoRA+ and PiSSA

--- a/docs/main.tex
+++ b/docs/main.tex
@@ -88,6 +88,22 @@ We evaluate each method using classification accuracy, macro F1-score, wall-cloc
 
 %---------------------------------------------------------
 \section{Experiments}
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=1\linewidth]{../plots/lora_plus_eval_accuracy_f1_heatmaps_final.pdf}
+    \caption{TODO}
+    \label{fig:lora_plus}
+\end{figure}
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=1\linewidth]{../plots/pissa_train_loss_vs_step_final_v2.pdf}
+    \caption{TODO}
+    \label{fig:pissa}
+\end{figure}
+
+
 For each method, describe the hyperparameters explored with a table.
 
 Gather the best results into a final table, comparing the methods.
