Add plot with BA init and LoRA-XS

--- a/docs/main.tex
+++ b/docs/main.tex
@@ -103,6 +103,13 @@ We evaluate each method using classification accuracy, macro F1-score, wall-cloc
     \label{fig:pissa}
 \end{figure}
 
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=1\linewidth]{../plots/ba_init_eval_acc_f1_heatmaps.pdf}
+    \caption{TODO}
+    \label{fig:ba_init}
+\end{figure}
+
 
 For each method, describe the hyperparameters explored with a table.
 
