--- a/docs/main.tex
+++ b/docs/main.tex
@@ -30,7 +30,7 @@
 \maketitle
 %---------------------------------------------------------
 \begin{abstract}
-Low-rank adaptation (LoRA) has become a lightweight alternative to full fine-tuning for large language models. In this work, we benchmark vanilla LoRA and four recent LoRA variants: swapped-init LoRA (A = 0, B $\sim \mathcal{U}(-0.01, 0.01)$), LoRA-XS ($A \cdot R \cdot B$ factorisation), LoRA+ ($\eta_A \neq \eta_B$ learning rate scaling) and PiSSA-initialised LoRA ($\text{SVD}(W)$ warm-start) on the TinyLlama-1.1 B backbone and the GLUE SST-2 sentiment-classification task.  All experiments were performed on a single RTX 2070 (8 GB), enforcing strict memory budgets. We report classification accuracy, macro-F1, wall-clock training time and peak GPU memory to highlight the trade-offs each variant offers under resource constrained conditions.
+Low-rank adaptation (LoRA) has become a lightweight alternative to full fine-tuning for large language models. In this work, we benchmark vanilla LoRA and four recent LoRA variants: swapped-init LoRA (A = 0, B $\sim \mathcal{U}(-0.01, 0.01)$), LoRA-XS ($A \cdot R \cdot B$ factorisation), LoRA+ (learning rate scaling, i.e. $\eta_A \neq \eta_B$) and PiSSA-initialised LoRA ($\text{SVD}(W)$ warm-start) on the TinyLlama-1.1 B backbone and the GLUE SST-2 sentiment-classification task.  All experiments were performed on a single RTX 2070 (8 GB), enforcing strict memory budgets. We report classification accuracy, macro-F1, wall-clock training time and peak GPU memory to highlight the trade-offs each variant offers under resource constrained conditions.
 \end{abstract}
 %---------------------------------------------------------
 \section{Introduction}
@@ -75,15 +75,16 @@ We evaluate each method using classification accuracy, macro F1-score, wall-cloc
 \subsection{Hardware} All experiments were run on a single NVIDIA RTX 2070 with 8 GB of GPU memory. We enforced strict memory budgets to ensure that all methods could be compared under the same conditions. The training time was measured in wall-clock time, and the peak GPU memory usage was monitored throughout the training process.
 
 \section{Low Rank Adaptation}
-\noindent\textbf{LoRA.}  Low-Rank Adaptation (LoRA) \cite{hu2021loralowrankadaptationlarge} freezes the pre-trained weight matrix $W\!\in\!\mathbb{R}^{d_{\text{out}}\times d_{\text{in}}}$ and learns a low-rank residual $\Delta W = A B^{\top}$ with $A\!\in\!\mathbb{R}^{d_{\text{out}}\times r}$ and $B\!\in\!\mathbb{R}^{d_{\text{in}}\times r}$, rank $r\!\ll\!\min(d_{\text{out}},d_{\text{in}})$.  During fine-tuning the forward pass uses $W+\Delta W$ while gradients flow only through $A$ and $B$, reducing trainable parameters from $d_{\text{out}}d_{\text{in}}$ to $r(d_{\text{out}}+d_{\text{in}})$.  Because the base weights never change, LoRA brings large memory savings by orders of magnitude (no optimizer states on $W$) and enables faster experimentation on consumer GPUs.
 
-\noindent\textbf{Swapped-init LoRA (A = 0, B $\sim\mathcal{U}$).}  The original LoRA initialises $A$ from a small uniform distribution and sets $B$ to zero so that $\Delta W$ starts at 0.  Hayou~et~al.\ \cite{hayou2024impactinitializationlorafinetuning} dive deeper into the intuition behind this choice, arguing that it's is indeed better to start from (A = 0, B $\sim\mathcal{U}$) instead of (A $\sim\mathcal{U}$, B = 0) and the reason behind this might be that the first initializatino allows the use of larger learning rates (without causing output instability) resulting in more efficient learning.
+\noindent\textbf{LoRA.}  Low-Rank Adaptation (LoRA) \cite{hu2021loralowrankadaptationlarge} freezes the pre-trained weight matrix $W\!\in\!\mathbb{R}^{d_{\text{out}}\times d_{\text{in}}}$ and learns a low-rank residual $\Delta W = B A$ with $A\!\in\!\mathbb{R}^{r \times d_{\text{in}}}$ and $B\!\in\!\mathbb{R} ^ {d_{\text{out}} \times r}$, rank $r\!\ll\!\min(d_{\text{out}},d_{\text{in}})$.  During fine-tuning the forward pass uses $W+\Delta W$ while gradients flow only through $A$ and $B$, reducing trainable parameters from $d_{\text{out}}d_{\text{in}}$ to $r(d_{\text{out}}+d_{\text{in}})$.  Because the base weights never change, LoRA brings large memory savings by orders of magnitude (no optimizer states on $W$) and enables faster experimentation on consumer GPUs.
 
-\noindent\textbf{LoRA-XS.}  LoRA-XS \cite{balazy2024loraxslowrankadaptationextremely} adds an intermediate low-rank matrix $R\!\in\!\mathbb{R}^{r\times r}$ and factorises the residual as $\Delta W = A R B^{\top}$.  The extra $r^{2}$ parameters increase expressiveness while preserving the $\mathcal{O}(r(d_{\text{out}}+d_{\text{in}}))$ memory budget (for typical $r\!\ll\!d$ the $r^{2}$ term is negligible). Empirically, LoRA-XS allows for more expressive low-rank representations while maintaining the same memory footprint as vanilla LoRA.
+\noindent\textbf{Swapped-init LoRA (A = 0, B $\sim\mathcal{U}$).}  The original LoRA initialises $B$ from a small uniform distribution and sets $A$ to zero so that $\Delta W$ starts at 0.  Hayou~et~al.\ \cite{hayou2024impactinitializationlorafinetuning} dive deeper into the intuition behind this choice, arguing that it's is indeed better to start from (A = 0, B $\sim\mathcal{U}$) instead of (A $\sim\mathcal{U}$, B = 0) and the reason behind this might be that the first initialization allows the use of larger learning rates (without causing output instability) resulting in more efficient learning.
 
-\noindent\textbf{LoRA+}\cite{hayou2024loraefficientlowrank} modifies the original LoRA method by applying different learning rates to the low-rank matrices $A$ and $B$. Since $A\!\in\!\mathbb{R}^{d_{\text{out}}\times r}$ and $B^\top\!\in\!\mathbb{R}^{r\times d_{\text{in}}}$ have completely different shapes, the authors argue that their differing dimensionality and roles justify independent optimization dynamics. Empirically, using a higher learning rate for $A$ (typically by a factor of 2-4 for LLaMA models) improves convergence and downstream performance. Note that in the LoRA+ paper the terminology is slightly different, with $A$ and $B$ swapped compared to the original LoRA paper.
+\noindent\textbf{LoRA-XS.} LoRA-XS \cite{balazy2024loraxslowrankadaptationextremely} adds an intermediate low-rank matrix $R\!\in\!\mathbb{R}^{r\times r}$ and factorises the residual as $\Delta W = A R B^{\top}$.  The extra $r^{2}$ parameters increase expressiveness while preserving the $\mathcal{O}(r(d_{\text{out}}+d_{\text{in}}))$ memory budget (for typical $r\!\ll\!d$ the $r^{2}$ term is negligible). Empirically, LoRA-XS allows for more expressive low-rank representations while maintaining the same memory footprint as vanilla LoRA.
 
-\noindent\textbf{PiSSA.} PiSSA\cite{meng2025pissaprincipalsingularvalues} (Principal Singular Values and Singular Vectors Adaptation of Large Language Models) introduces a singular value decomposition (SVD)-based initialization strategy for LoRA. Given a target weight matrix \( W \in \mathbb{R}^{d_{\text{out}} \times d_{\text{in}}} \), PiSSA computes its SVD: \( W = U \Sigma V^\top \). The top-\( r \) singular components are then used to initialize the low-rank adaptation matrices \( A \) and \( B \) such that \( \Delta W = AB^\top \), where \( A = U_{[:, :r]} \Sigma^{1 / 2}_{[:r, :r]} \in \mathbb{R}^{d_{\text{out}} \times r} \) and \( B = \Sigma^{1 / 2}_{[:r, :r]} V^\top_{[:, :r]} \). Furthermore, before freezing, the original weight matrix $W$ is replaced with the rest of the singular components, i.e., \( W = U_{[:, r:]} \Sigma_{[r:, r:]} V^\top_{[:, r:]} \in \mathbb{R}^{m \times n} \). By $\Sigma^{1 / 2}$ we mean the square root of the diagonal matrix $\Sigma$ and the slicing notations are consistent with PyTorch's tensor indexing. This initialization aligns the low-rank structure with the principal subspace of the original weight matrix, improving convergence speed and performance stability in downstream tasks.
+\noindent\textbf{LoRA+}\cite{hayou2024loraefficientlowrank} modifies the original LoRA method by applying different learning rates to the low-rank matrices $A$ and $B$. Since $A\!\in\!\mathbb{R}^{r \times d_{\text{in}}}$ and $B\!\in\!\mathbb{R}^{d_\text{out} \times r}$ have completely different shapes, the authors argue that their differing dimensionality and roles justify independent optimization dynamics. Empirically, using a higher learning rate for $B$ (typically by a factor of 2-4 for LLaMA models) improves convergence and downstream performance.
+
+\noindent\textbf{PiSSA.} PiSSA\cite{meng2025pissaprincipalsingularvalues} (Principal Singular Values and Singular Vectors Adaptation of Large Language Models) introduces a singular value decomposition (SVD)-based initialization strategy for LoRA. Given a target weight matrix \( W \in \mathbb{R}^{d_{\text{out}} \times d_{\text{in}}} \), PiSSA computes its SVD: \( W = U \Sigma V^\top \). The top-\( r \) singular components are then used to initialize the low-rank adaptation matrices \( A \) and \( B \) such that \( \Delta W = A B \), where \( A = U_{[:, :r]} \Sigma^{1 / 2}_{[:r, :r]} \in \mathbb{R}^{d_{\text{out}} \times r} \) and \( B = \Sigma^{1 / 2}_{[:r, :r]} V^\top_{[:, :r]} \). Furthermore, before freezing, the original weight matrix $W$ is replaced with the rest of the singular components, i.e., \( W = U_{[:, r:]} \Sigma_{[r:, r:]} V^\top_{[:, r:]} \in \mathbb{R}^{m \times n} \). By $\Sigma^{1 / 2}$ we mean the square root of the diagonal matrix $\Sigma$ and the slicing notations are consistent with PyTorch's tensor indexing. This initialization aligns the low-rank structure with the principal subspace of the original weight matrix, improving convergence speed and performance stability in downstream tasks. The notation used in this paper is the other way around compared to the original paper, i.e., $W = A B$ instead of $W = B A$.
 
 
 %---------------------------------------------------------
