Add train loss curves for LoRA+

--- a/docs/main.tex
+++ b/docs/main.tex
@@ -90,10 +90,14 @@ We evaluate each method using classification accuracy, macro F1-score, wall-cloc
 %---------------------------------------------------------
 \section{Experiments}
 
+\subsection{LoRA+}
+
+We used the official implementation of LoRA+ which can be found at the GitHub repository \href{https://github.com/nikhil-ghosh-berkeley/loraplus}{nikhil-ghosh-berkeley/loraplus}. Following the paper, we tested with $\alpha = 16$ and $r = 32$. For the learning rates we leveraged a grid-search over the following values: $\eta_A \in \{10^{-5}, 5 \times 10^{-5}, 10^{-4}\}$ and $\eta_B \in \{10^{-4}, 2 \times 10^{-4}, 4 \times 10^{-4}\}$. Results presented in Figure~\ref{fig:lora_plus} show that the best performing ratio $\eta_B / \eta_A$ is 4, with $\eta_A = 10^{-4}$. Picking the right learning rates is still crucial, but using a different learning rate for $B$ not only yields better results, but also allows for faster convergence. A very interesting observation is that configurations with same value of $\eta_A \cdot \eta_B$ have similar convergence speed.
+
 \begin{figure}[ht]
     \centering
-    \includegraphics[width=1\linewidth]{../plots/lora_plus_eval_accuracy_f1_heatmaps_final.pdf}
-    \caption{TODO}
+    \includegraphics[width=1\linewidth]{../plots/lora_plus_train_loss_curves_final_v2.pdf}
+    \caption{Accuracy and F1-score for LoRA+ with different learning rates for $A$ and $B$. Only the first 200 out of 1250 steps are shown for clarity.}
     \label{fig:lora_plus}
 \end{figure}
 
