--- a/docs/main.tex
+++ b/docs/main.tex
@@ -92,7 +92,7 @@ We evaluate each method using classification accuracy, macro F1-score, wall-cloc
 
 \subsection{LoRA variants}
 
-We begin by comparing the original LoRA initialisation ($A \sim \mathcal{U}(-0.01, 0.01), B = 0$) with the swapped LoRA initialisation ($A = 0$, $B \sim \mathcal{U}(-0.01, 0.01)$) and with the LoRA-XS method, ($A \sim \mathcal{U}(-0.01, 0.01), B = 0, R = I_r$, with $I_r$ being the identity matrix). All three methods use five different ranks: 2, 4, 8, 16, and 32. Additionally, we tested with $\alpha = r$ and a learning rate of $2 \times 10 ^ {-4}$. The results presented in Figure~\ref{fig:ba_init} show that the swapped LoRA initialisation outperforms the original LoRA initialisation in most cases. However, both initialisation schemes are surpassed by the LoRA-XS method for all ranks, which is explained by the additional expresivity introduced by the intermediate low-rank matrix $R$. Results show as well that performance increases with the rank, but diminishes after a certain point.
+We begin by comparing the original LoRA initialisation ($A \sim \mathcal{U}(-0.01, 0.01), B = 0$) with the swapped LoRA initialisation ($A = 0$, $B \sim \mathcal{U}(-0.01, 0.01)$) and with the LoRA-XS method, ($A \sim \mathcal{U}(-0.01, 0.01), B = 0, R = I_r$, with $I_r$ being the identity matrix). All three methods use five different ranks: 2, 4, 8, 16, and 32. Additionally, we tested with $\alpha = r$ and a learning rate of $2 \times 10 ^ {-4}$. The results presented in Figure~\ref{fig:ba_init} show that the swapped LoRA initialisation outperforms the original LoRA initialisation in most cases. However, both initialisation schemes are surpassed by the LoRA-XS method for all ranks, which is explained by the additional expresivity introduced by the intermediate low-rank matrix $R$. Results show as well that performance increases with the rank, achieving the peak for ranks 8 and 16, and diminishing afterwards.
 
 \begin{figure}[ht]
     \centering
